--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,16 +25,22 @@ jobs:
       
     # Build the Docker image
     - name: Build & Publish
+      env:
+        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+        GCP_APPLICATION: ${{ secrets.GCP_APPLICATION }}
       run: |
-        echo ${{ secrets.GCP_PROJECT_ID }}
-        gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-        gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APPLICATION }}
+        echo "GCP_PROJECT_ID=${GCP_PROJECT_ID}""
+        gcloud config set project ${GCP_PROJECT_ID}
+        gcloud builds submit --tag gcr.io/${GCP_PROJECT_ID}/${GCP_APPLICATION}
         gcloud config set run/region europe-west4
       
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
+      env:
+        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+        GCP_APPLICATION: ${{ secrets.GCP_APPLICATION }}
       run: |
-        gcloud run deploy ${{ secrets.GCP_APPLICATION }} --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APPLICATION }} \
+        gcloud run deploy ${GCP_APPLICATION} --image gcr.io/${GCP_PROJECT_ID}/${GCP_APPLICATION} \
         --platform managed \
         --allow-unauthenticated \
         --memory 512M
