--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,13 @@ jobs:
     
     # Configure Docker with Credentials
     - name: Configure Docker
+      shell: bash
       run: |
         gcloud auth configure-docker
       
     # Build the Docker image
     - name: Build & Publish
+      shell: bash
       env:
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
         GCP_APPLICATION: ${{ secrets.GCP_APPLICATION }}
@@ -36,6 +38,7 @@ jobs:
       
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
+      shell: bash
       env:
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
         GCP_APPLICATION: ${{ secrets.GCP_APPLICATION }}
